Fixed navigation z-index

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999; 
+  z-index: 0;
   text-align: center;
   transition: all .10s ease;
   background: rgba(0, 0, 0, 0.7);
@@ -18,7 +18,7 @@
     right: 0;
     left: inherit;
     position: relative;
-    z-index: 0;
+   
   }
   ul {
     margin: 0 50px 0 0;
